--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,58 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
-description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+name: glmark2-example
+version: '0.1'
+summary: GLMark2 IoT example kiosk
+description: GLMark2 IoT example kiosk, using Wayland
+base: core18
+confinement: devmode
+grade: devel
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
+apps:
+  glmark2-example:
+    command-chain:
+    - bin/wayland-launch
+    command: usr/bin/glmark2-wayland
+    plugs:
+    -  opengl
+    -  wayland
+    
+  daemon:
+    daemon: simple
+    restart-condition: always
+    command-chain:
+    - bin/run-daemon
+    - bin/wayland-launch
+    command: usr/bin/glmark2-wayland
+    plugs:
+    -  opengl
+    -  wayland
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
+  glmark2-wayland:
     plugin: nil
+    stage-packages:
+      - glmark2-wayland
+
+  mesa:
+    plugin: nil
+    stage-packages:
+      - libgl1-mesa-dri
+      - libwayland-egl1-mesa
+      - libglu1-mesa
+
+  mir-kiosk-snap-launch:
+    plugin: dump
+    stage-packages:
+      - inotify-tools
+    source: https://github.com/MirServer/mir-kiosk-snap-launch.git
+    override-build:  $SNAPCRAFT_PART_BUILD/build-with-plugs.sh opengl wayland
+
+layout:
+  /usr/share/glmark2:
+    bind: $SNAP/usr/share/glmark2
+
+environment:
+  LD_LIBRARY_PATH: ${SNAP}/usr/lib/:${SNAP}/usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/
+  # Prep EGL
+  __EGL_VENDOR_LIBRARY_DIRS: $SNAP/etc/glvnd/egl_vendor.d:$SNAP/usr/share/glvnd/egl_vendor.d
+  LIBGL_DRIVERS_PATH: ${SNAP}/usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/dri
+  LIBVA_DRIVERS_PATH: ${SNAP}/usr/lib/${SNAPCRAFT_ARCH_TRIPLET}/dri
